syntax = "proto3";

option go_package = "github.com/Masha003/Golang-internship.git/internal/api/pb"
import "google/protobuf/timestamp.proto";

message User {
    string ID = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    google.protobuf.Timestamp deleted_at = 4;
    string name = 5;
    string email = 6;
    string image = 7;
}

message RegisterUser {
    string email = 1;
    string name = 2;
    string password = 3
}

message LoginUser {
    string email = 1;
    string password = 2;
}

