syntax = "proto";

service UserService {
    rpc GetById(User.ID) returns (User);
}
